--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,87 +1,61 @@
-version: "3.8"
+version: '3.8'
 
 services:
-  authentication_service:
+  backend:
     build:
       context: .
-      dockerfile: Dockerfile
-    container_name: authentication_service
+      dockerfile: Dockerfile.backend
     ports:
       - "5001:5001"
-    depends_on:
-      - sqlserver
-      - rabbitmq
-    environment:
-      - ConnectionStrings__DefaultConnection=Server=sqlserver,1433;Database=CashFlowControlDb;User Id=sa;Password=CfcAdmin123!;TrustServerCertificate=True
-      - RabbitMQ__Host=rabbitmq- ASPNETCORE_URLS=http://0.0.0.0:5001
-    entrypoint: ["dotnet", "/out/AuthenticationService.dll"]
-    networks:
-      - backend
-
-  launch_service:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: launch_service
-    ports:
       - "5002:5002"
-    depends_on:
-      - sqlserver
-      - rabbitmq
+      - "5003:5003"
     environment:
       - ConnectionStrings__DefaultConnection=Server=sqlserver,1433;Database=CashFlowControlDb;User Id=sa;Password=CfcAdmin123!;TrustServerCertificate=True
       - RabbitMQ__Host=rabbitmq
-      - ASPNETCORE_URLS=http://0.0.0.0:5002
-    entrypoint: ["dotnet", "/out/LaunchService.dll"]
+      - ASPNETCORE_URLS=http://0.0.0.0:5001
+      - MongoDB__ConnectionString=mongodb://mongodb:27017
+      - MongoDB__DatabaseName=ConsolidationDB
     networks:
-      - backend
-
-  consolidation_service:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: consolidation_service
-    ports:
-      - "5003:5003"
+      - app_network
     depends_on:
       - mongodb
       - rabbitmq
-    environment:
-      - MongoDB__ConnectionString=mongodb://mongodb:27017
-      - MongoDB__DatabaseName=ConsolidationDB
-      - RabbitMQ__Host=rabbitmq- ASPNETCORE_URLS=http://0.0.0.0:5003
-    entrypoint: ["dotnet", "/out/ConsolidationService.dll"]
-    networks:
-      - backend
+      - sqlserver
 
-  sqlserver:
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: sqlserver
-    environment:
-      SA_PASSWORD: "CfcAdmin123!"
-      ACCEPT_EULA: "Y"
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile.frontend
     ports:
-      - "1433:1433"
+      - "80:80"
     networks:
+      - app_network
+    depends_on:
       - backend
 
   mongodb:
-    image: mongo:6.0
-    container_name: mongodb
-    ports:
-      - "27017:27017"
+    image: mongo:latest
+    environment:
+      - MongoDB__ConnectionString=mongodb://mongodb:27017
+      - MongoDB__DatabaseName=ConsolidationDB
     networks:
-      - backend
+      - app_network
 
   rabbitmq:
-    image: rabbitmq:3-management
-    container_name: rabbitmq
-    ports:
-      - "5672:5672"
-      - "15672:15672"
+    image: rabbitmq:management
     networks:
-      - backend
+      - app_network
+
+  sqlserver:
+    image: mcr.microsoft.com/mssql/server:2022-latest
+    environment:
+      - ACCEPT_EULA=Y
+      - SA_PASSWORD=CfcAdmin123!
+    ports:
+        - "1433:1433"
+    networks:
+      - app_network
 
 networks:
-  backend:
+  app_network:
     driver: bridge
